Bug 408087 - File layers using .kra files saved in 4.1.7 doesn't show up when opening in 4.2.0
Summary: File layers using .kra files saved in 4.1.7 doesn't show up when opening in 4...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 4.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
: 408909 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-29 23:39 UTC by katearcher89
Modified: 2019-06-20 10:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
an example of incorrect behavior of file layers in 4.2.0 (865.64 KB, application/zip)
2019-05-29 23:39 UTC, katearcher89
Details

Note You need to log in before you can comment on or make changes to this bug.
Description katearcher89 2019-05-29 23:39:43 UTC
Created attachment 120382 [details]
an example of incorrect behavior of file layers in 4.2.0

SUMMARY

When trying to open .kra files containing file layers referencing another .kra files 4.2.0 opens them with blank images instead of supposed-to-be-there-images-from-a-file-layer. Opening files with .png file layers on the other hand works fine.

STEPS TO REPRODUCE
Fork 1:
1. Download the attachment with files saved in 4.1.7.
2. Open the file named test_file_layer_with_layer_kra_417.kra in 4.2.0

Fork 2.
1. Create a new file in 4.1.7
2. Make a new file layer referencing .kra file and save the file.
3. Open the previously saved file in 4.2.0.

OBSERVED RESULT
There should be a blank image instead of the file layer and on big(dimension wise) images(both file layer's and an image itself) canvas starts to lag. However clicking on folder icon on a file layer opening the file layer it is referencing. 

Opening the same file in 4.1.7 on the other hand working totally fine.


EXPECTED RESULT
Files should opened as before.

Doing the same steps with .png files results in expected behavior: files in 4.17 and 4.2.0 looks the same and file layers are displayed correctly. I've included .png example in the same attachment for demonstrating the case.


This is happening on both windows 10(64bit) and ubuntu 18.04 64bit-appimage version of 4.2.0.
Comment 1 katearcher89 2019-05-30 00:31:30 UTC
For me it's a quite severe bug since my workflow is tightly coupled with file layer functionality and because of it I cannot use new krita at all.
Comment 2 vanyossi 2019-05-30 04:43:05 UTC
This is so weird on macOS. 4.1.7 can't create .kra file Layers, but if I make a kra file layer in 4.2.0 it will show as an empty layer.

The wird thing: Saving the file in 4.2 and opening it in 4.1.7 the KRA file layer shows correctly.

Seems to be a regression
Comment 3 vanyossi 2019-06-19 15:22:10 UTC
*** Bug 408909 has been marked as a duplicate of this bug. ***
Comment 4 Halla Rempt 2019-06-20 08:43:20 UTC
Git commit 65e2cfa38ba8464793641d02ed0e792ec96aa3f1 by Boudewijn Rempt.
Committed on 20/06/2019 at 08:42.
Pushed by rempt into branch 'master'.

Fix using kra and ora files in file layers

M  +1    -1    libs/ui/kis_safe_document_loader.cpp

https://invent.kde.org/kde/krita/commit/65e2cfa38ba8464793641d02ed0e792ec96aa3f1
Comment 5 Halla Rempt 2019-06-20 10:49:29 UTC
Git commit bdf356d85a50c692901b527dfafc008ec74b3a95 by Boudewijn Rempt.
Committed on 20/06/2019 at 10:34.
Pushed by rempt into branch 'krita/4.2'.

Fix using kra and ora files in file layers

M  +1    -1    libs/ui/kis_safe_document_loader.cpp

https://invent.kde.org/kde/krita/commit/bdf356d85a50c692901b527dfafc008ec74b3a95