Fix using kra and ora files in file layers

BUG:408087